全体的なデザインの仕上げ、投稿機能をより簡単にできるように実装、時間の表示ずれのエラー改善

--- a/static/css/style-list.css
+++ b/static/css/style-list.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: #edf2f7;
     position: relative;
 }
 
@@ -9,7 +9,11 @@ body {
     width: 100%;
     margin: 0 auto;
     position: relative;
+    padding: 4%;
+    min-height: 630px;
 }
+
+
 
 .flex {
     display: flex;
@@ -19,14 +23,20 @@ body {
 }
 
 /* ヘッダー */
+/***** ヘッダー *****/
 header {
-    padding: 10px 5px;
     color: #000000;
-}
+    background-color: #ffffff;
+  }
 .logo img {
-    width: 220px;
-    height: 150px;
+    width: 180px;
+    height: auto;
 }
+  
+.right.menu{
+  justify-content: flex-end;
+  }
+/* *************** */
 
 /* メイン */
 .title {
@@ -52,7 +62,26 @@ a.go-list {
 }
 
 .card {
-    width: 28%!important;
+    width: 31.8%!important;
     font-size: 1.2rem!important;
     line-height: 2.3rem!important;
+}
+
+
+.ui.centered.cards {
+    justify-content: flex-start;
+    padding: 0 7%;
+}
+
+.flex-container{
+    display: flex;
+    text-align: center;
+    margin: 0 0 20px 0;
+    padding: 0 7%;
+}
+
+
+/* フッター */
+footer {
+    padding: 20px 0;
 }
