--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
     <link rel="stylesheet" href="static/css/style-index.css">
+    <link rel="stylesheet" href="static/css/style-common.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
     <script src="https://js.stripe.comz/v3/"></script>
     <title>おもいでノート</title>
@@ -61,9 +62,12 @@
         </div>
     </main>
 
-    <footer>
-        <p>AITOTO</p>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 AITOTO. All rights reserved.</p>
+        </div>
     </footer>
+    
 </body>
 
 </html>
