--- a/templates/login.html
+++ b/templates/login.html
@@ -1,58 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN</title>
-    <style>
-      .login_form_btm {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        text-align: center;
-      }
-      .login_form_top {
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        text-align: center;
-      }
-      .register {
-        display: flex;
-        position: absolute;
-        top: 60%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-        text-align: center;
-      }
-      .register a {
-        margin-left: 10px;
-        margin-top: 15px;
-      }
-      footer{
-            width: 100%;
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            text-align: center;
-        }
 
-    </style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/static/css/style-register.css">
+  <link rel="stylesheet" href="static/css/style-common.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
+  <title>LOGIN</title>
+
 </head>
+
 <body>
-    <div class="login_form_top">
-      <h1>LOGIN</h1>
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          {% for message in messages %}
-            <p>{{ message }}</p>
-          {% endfor %}
+
+  <body class="body-bg">
+    <header>
+      <div class="ui secondary menu stackable header-sticky">
+        <a href="/" class="logo">
+          <img src="../static/images/logo.png">
+        </a>
+        {% if current_user.is_authenticated %}
+        <a class="item" href="/">トップページ</a>
+        <a class="item" href="/preview_page">プレゼント登録</a>
+        <a class="item" href="/list">マイリスト</a>
+        <div class="right menu">
+          <a class="ui item" href="/logout">ログアウト</a>
+        </div>
+        {% else %}
+        <div class="right menu">
+          <a class="ui item" href="/register">新規会員登録</a>
+          <a class="ui item" href="/login">ログイン</a>
+        </div>
         {% endif %}
-      {% endwith %}
-    </div>
-    <form action="/login" method="post">
+      </div>
+    </header>
+    <main>
+      <div class="form-container">
+        <div class="ui container">
+          <h2 class="ui center aligned">ログイン</h2>
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+          {% for message in messages %}
+          <p>{{ message }}</p>
+          {% endfor %}
+          {% endif %}
+          {% endwith %}
+          <form method="POST">
+            <div class="ui form">
+              <div class="field">
+                <label>ユーザ名</label>
+                <input type="text" name="username" placeholder="ユーザ名">
+              </div>
+              <div class="field">
+                <label>パスワード</label>
+                <input type="password" name="password" placeholder="パスワード">
+              </div>
+              <button class="ui fluid large teal submit button" type="submit">ログイン</button>
+            </div>
+          </form>
+          <h4>アカウントをお持ちでない場合は<a href="/register">新規登録</a></h4>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <p>&copy; 2024 AITOTO. All rights reserved.</p>
+      </div>
+    </footer>
+
+
+
+    <!-- <form action="/login" method="post">
       <div class="login_form_btm">
         <input type="id" id="user" name="username" placeholder="UserID">
         <input type="password" id="pass" name="password" placeholder="Password">
@@ -62,9 +80,7 @@
     <div class="register">
       <p>アカウントを持ちでない場合は</p>
       <a href="/register">新規登録</a>
-    </div>
-    <footer>
-      <p>AITOTO</p>
-    </footer>
-</body>
+    </div> -->
+
+
 </html>
