--- a/templates/register.html
+++ b/templates/register.html
@@ -4,127 +4,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
-    
+    <link rel="stylesheet" href="/static/css/style-register.css">
+    <link rel="stylesheet" href="static/css/style-common.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
     <title>SIGNUP</title>
-
-    <style>
-        .login_form_btm {
-            transform: translate(0%, 40%);
-            text-align: center;
-            margin-bottom: 50px;
-        }
-
-        .register_style {
-            position: relative;
-            display: flex;
-            justify-content: center;
-        }
-
-
-
-        .margin {
-            margin-bottom: 30px;
-        }
-
-        .UserID_Label {
-            margin-left: 25px;
-        }
-
-        #birthday {
-            display: flex;
-            justify-content: center;
-
-        }
-
-        #birthday div {
-            margin-right: 10px;
-        }
-
-        .register {
-            display: flex;
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translate(-50%, 100%);
-            text-align: center;
-        }
-
-        .register a {
-            margin-left: 10px;
-            margin-top: 15px;
-            text-decoration: none;
-        }
-
-        .submit_button{
-            margin-top: 10px;
-        }
-
-        footer {
-            position: absolute;
-            display: inline-block;
-            width: 100%;
-            bottom: 0;
-            text-align: center;
-
-        }
-
-    </style>
 </head>
 
-<body>
-    <div class="login_form_btm">
-        <h1>会員登録</h1>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        {% for message in messages %}
+<body class="body-bg">
+    <header>
+        <div class="ui secondary menu stackable header-sticky">
+            <a href="/" class="logo">
+                <img src="../static/images/logo.png">
+            </a>
+            {% if current_user.is_authenticated %}
+            <a class="item" href="/">トップページ</a>
+            <a class="item" href="/preview_page">プレゼント登録</a>
+            <a class="item" href="/list">マイリスト</a>
+            <div class="right menu">
+                <a class="ui item" href="/logout">ログアウト</a>
+            </div>
+            {% else %}
+            <div class="right menu">
+                <a class="ui item" href="/register">新規会員登録</a>
+                <a class="ui item" href="/login">ログイン</a>
+            </div>
+            {% endif %}
+        </div>
+    </header>
 
-        <p>{{ message }}</p>
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
-    </div>
-    <div class="register_style">
-        <form action="/register" method="post">
-            <div class="login_form_top">
-                <label for="">ユーザー名<span class="required-mark">*</span></label>
-                <input type="text" name="username">
-                <label for="">パスワード<span class="required-mark">*</span></label>
-                <input type="password" name="password">
-                <label for="">生年月日<span class="required-mark">*</span></label>
-                <input type="date" name="birthday" id="birthday">
-            </div>
-            <label for="gender">性別<span class="required-mark">*</span></label>
-            <div class="gender-buttons">
-                <label class="gender-button" onclick="changeColor('blue')">
-                    <input type="hidden" id="maleHidden" name="genderMale" value="">
-                    <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
-                    <button type="button" id="male" class="css-button-sliding-to-left--sky" name="genderMale"
-                        value="male">男性</button>
-                </label>
-                <label class="gender-button" onclick="changeColor('red')">
-                    <input type="hidden" id="femaleHidden" name="genderFemale" value="">
-                    <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
-                    <button type="button" id="female" class="css-button-sliding-to-left--rose" name="genderFemale"
-                        value="female">女性</button>
-                </label>
-                <label class="gender-button" onclick="changeColor('gray')">
-                    <input type="hidden" id="otherHidden" name="genderOther" value="">
-                    <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
-                    <button type="button" id="other" class="css-button-sliding-to-left--grey" name="genderOther"
-                        value="other">その他</button>
-                </label>
-            </div>
-            <button type="submit" class="submit_button">登録</button>
-        </form>
-        <div class="register">
-            <p>アカウントをお持ちですか？</p>
-            <a href="/login">ログインはこちら</a>
+    <div class="form-container">
+        <div class="ui container">
+            <h2 class="ui center aligned">新規登録</h2>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
+
+            <p>{{ message }}</p>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+            <form method="POST">
+                <div class="ui form">
+                    <div class="field">
+                        <label>ユーザ名<span class="required-mark">*</span></label>
+                        <input type="text" name="username" placeholder="ユーザ名">
+                    </div>
+                    <div class="field">
+                        <label>パスワード<span class="required-mark">*</span></label>
+                        <input type="password" name="password" placeholder="パスワード">
+                    </div>
+                    <label for="gender">性別<span class="required-mark">*</span></label>
+                    <div class="gender-buttons">
+                        <label class="gender-button" onclick="changeColor('blue')">
+                            <input type="hidden" id="maleHidden" name="genderMale" value="">
+                            <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
+                            <button type="button" id="male" class="css-button-sliding-to-left--sky" name="genderMale"
+                                value="male">男性</button>
+                        </label>
+                        <label class="gender-button" onclick="changeColor('red')">
+                            <input type="hidden" id="femaleHidden" name="genderFemale" value="">
+                            <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
+                            <button type="button" id="female" class="css-button-sliding-to-left--rose"
+                                name="genderFemale" value="female">女性</button>
+                        </label>
+                        <label class="gender-button" onclick="changeColor('gray')">
+                            <input type="hidden" id="otherHidden" name="genderOther" value="">
+                            <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
+                            <button type="button" id="other" class="css-button-sliding-to-left--grey" name="genderOther"
+                                value="other">その他</button>
+                        </label>
+                    </div>
+                    <button class="ui fluid large teal submit button" type="submit">登録</button>
+                </div>
+            </form>
+            <h4>既にアカウントがある場合は<a href="/login">こちらからログイン</a></h4>
         </div>
     </div>
-
-    <footer>
-        <p>AITOTO</p>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 AITOTO. All rights reserved.</p>
+        </div>
     </footer>
 
     <script>
@@ -169,7 +128,7 @@
             }
         }
 
-        
+
     </script>
 </body>
 
