--- a/templates/preview.html
+++ b/templates/preview.html
@@ -52,7 +52,7 @@
                                     <input class="file-upload-input" type='file' onchange="readURL(this);"
                                         accept="image/*" />
                                     <div class="drag-text" onclick="document.getElementById('fileInput').click();">
-                                        <h3>ここにファイルをドロップ＆ドロップ
+                                        <h3>ここにファイルをドラッグ＆ドロップ
                                             <br>
                                             または
                                             <br>
