--- a/static/css/style-edit.css
+++ b/static/css/style-edit.css
@@ -73,3 +73,34 @@
     margin: 5% 0 0 0;
     text-align: right;
 }
+
+/* レスポンシブ対応（モバイル） */
+@media screen and (max-width: 768px) {
+    .flex {
+        display: block;
+    }
+
+    .image {
+        width: 100%;
+    }
+
+    .content {
+        width: 100%;
+    }
+
+    .button_flex {
+        display: block;
+    }
+
+    #submit-button {
+        margin: 5% 0;
+    }
+
+    .button_flex .ui.button {
+        width: 100%;
+    }
+
+    .button_back {
+        text-align: center;
+    }
+}
