--- a/templates/list.html
+++ b/templates/list.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
     <link rel="stylesheet" href="static/css/style-list.css">
     <link rel="stylesheet" href="static/css/style-common.css">
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://js.stripe.comz/v3/"></script> -->
+    <script src="/static/javascript/hamburger.js"></script>
     <title>LIST</title>
 </head>
 
@@ -29,7 +33,11 @@
                 <a class="ui item" href="/login">ログイン</a>
             </div>
             {% endif %}
+            <div class="hamburger">
+                <i id="hamburger-toggle" class="icon bars"></i>
+            </div>
         </div>
+        
     </header>
 
     <main>
