--- a/templates/gift_return.html
+++ b/templates/gift_return.html
@@ -1,56 +1,112 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
-    <link rel="stylesheet" href="/static/css/style-gift_return.css">
-    <link rel="stylesheet" href="/static/css/style-common.css">
+
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style-common.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/static/css/style-edit.css"> -->
+    <link rel="stylesheet" type="text/css" href="/static/css/style-gift_return.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/static/css/style-index.css"> -->
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="https://js.stripe.comz/v3/"></script> -->
     <script src="/static/javascript/hamburger.js"></script>
-    <title>お返し</title>
+    <title>Edit Page</title>
 </head>
+<header>
+    <div class="ui secondary menu stackable header-sticky">
+        <a href="/" class="logo">
+            <img src="../static/images/logo.png">
+        </a>
+        {% if current_user.is_authenticated %}
+        <a class="item" href="/">トップページ</a>
+        <a class="item" href="/preview_page">プレゼント登録</a>
+        <a class="item" href="/list">マイリスト</a>
+        <div class="right menu">
+            <a class="ui item" href="/logout">ログアウト</a>
+        </div>
+        {% else %}
+        <div class="right menu">
+            <a class="ui item" href="/register">新規会員登録</a>
+            <a class="ui item" href="/login">ログイン</a>
+        </div>
+        {% endif %}
+        <div class="hamburger">
+            <i id="hamburger-toggle" class="icon bars"></i>
+        </div>
+    </div>
+</header>
 
 <body>
-    <header>
-        <div class="ui secondary menu stackable header-sticky">
-            <a href="/" class="logo">
-                <img src="../static/images/logo.png">
-            </a>
-            {% if current_user.is_authenticated %}
-                <a class="item" href="/">トップページ</a>
-                <a class="item" href="/preview_page">プレゼント登録</a>
-                <a class="item" href="/list">マイリスト</a>
-                <div class="right menu">
-                    <a class="ui item" href="/logout">ログアウト</a>
-                </div>
-            {% else %}
-                <div class="right menu">
-                    <a class="ui item" href="/register">新規会員登録</a>
-                    <a class="ui item" href="/login">ログイン</a>
-                </div>
-            {% endif %}
-            <div class="hamburger">
-                <i id="hamburger-toggle" class="icon bars"></i>
+    <div class="form-container">
+        <div class="ui ccontainer">
+            <h2 id="editor-title" class="ui center aligned">おすすめプレゼントはこちら</h2>
+            <div class="ui form">
+                <form method="POST" enctype="multipart/form-data" action="">
+                    <div class="flex">
+                        <div class="image">
+                            <img src="/static/images/present1.jpeg" class="preview">
+                        </div>
+                        <div class="content">
+                            <h2>agnès b.のショルダーバッグ</h3>
+                            <div class="description">
+                                <!-- ボタンでリンクに繋がる -->
+                                <a href="https://www.agnesb.co.jp/f/dsg-2610773" class="ui orange large button" target="_blank">購入はこちらから</a>
+                            </div>
+
+                            <div class="button_flex">
+                                <button id="submit-button" class="ui fluid large teal submit button"
+                                    type="submit">このプレゼントをセーブする</button>
+                                <a href="/gift_return" class="negative ui button" target="_blank">もう一度考えてもらう</a>
+
+                            </div>
+                            <div class="button_back"><a href="/submit_survey"
+                                    class="ui button large submit button">プレゼント提案書を見直す</a>
+                            </div>
+                            <div class="button_back"><a href="/"
+                                class="ui button large submit button">HOMEへ戻る</a>
+                        </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-        
-    </header>
-
-    <main>
-        <div class="container flex">
-            <h1 class="phrase">おすすめの返礼品はこれ！</h1>
-        </div>
-    </main>
+    </div>
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 AITOTO. All rights reserved.</p>
-        </div>
+        <!-- <div class="container"> -->
+        <p>&copy; 2024 AITOTO. All rights reserved.</p>
+        <!-- </div> -->
     </footer>
 
+    <script>
+        window.onload = function () {
+            var fileInput = document.getElementById('fileInput');
+            var previewImage = document.getElementById('previewImage');
+            var deleteButton = document.getElementById('delete-button');
+
+            fileInput.addEventListener('change', function (event) {
+                var file = event.target.files[0];
+
+                if (file) {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        previewImage.src = e.target.result;
+                        previewImage.style.display = 'block'; // プレビュー画像を表示
+                        document.querySelector('.image img.preview').style.display = 'none'; // 元の画像を非表示
+                    };
+                    reader.readAsDataURL(file);
+                }
+                // フォームの submit を防ぐ
+                event.preventDefault();
+            });
+
+        };
+    </script>
 </body>
 
 </html>
